--- a/src/CM/CoreBundle/Resources/config/routing.yml
+++ b/src/CM/CoreBundle/Resources/config/routing.yml
@@ -1,3 +1,9 @@
 cm_core_homepage:
     path:     /
+    methods: [GET]
     defaults: { _controller: CMCoreBundle:Default:index }
+
+cm_core_add_contact:
+    path:     /Ajouter-un-contact
+    methods: [GET]
+    defaults: { _controller: CMCoreBundle:Default:add }
