Creation d'un route pour modifier un contact Creation de la page de modification d'un contact avec le formulaire (SANS TWIG)

--- a/src/CM/CoreBundle/Resources/config/routing.yml
+++ b/src/CM/CoreBundle/Resources/config/routing.yml
@@ -7,3 +7,8 @@ cm_core_add_contact:
     path:     /Ajouter-un-contact
     methods: [GET]
     defaults: { _controller: CMCoreBundle:Default:add }
+
+cm_core_edit_contact:
+    path:     /Modifier-un-contact/{idContact}
+    methods: [GET]
+    defaults: { _controller: CMCoreBundle:Default:edit }
