--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -21,11 +21,11 @@ security:
             provider:       fos_userbundle
             form_login:
                 csrf_provider: form.csrf_provider
-                login_path: fos_user_security_login
+                login_path: /
                 check_path: fos_user_security_check
             logout:
                 path:       fos_user_security_logout
-                target:     /login
+                target:     /
             remember_me:
                 key:        %secret%
 
