Suppression page accueil et inscription car inutile avec fosuser Creation des vues de fosuser et du formulaire d'inscription Configuration du bundle user pour hériter de fosuser

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -6,11 +6,11 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: en
+    locale: fr
 
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
+    translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -80,6 +80,9 @@ swiftmailer:
     spool:     { type: memory }
 
 fos_user:
-    db_driver: orm # other valid values are 'mongodb' and 'couchdb'
-    firewall_name: main
-    user_class: CM\UserBundle\Entity\User
+    db_driver:      orm
+    firewall_name:  main
+    user_class:     CM\UserBundle\Entity\User
+    registration:
+        form:
+            type:   cm_user_registration
