--- a/src/CM/UserBundle/Resources/config/services.yml
+++ b/src/CM/UserBundle/Resources/config/services.yml
@@ -1,4 +1,6 @@
 services:
-#    cm_user.example:
-#        class: CM\UserBundle\Example
-#        arguments: [@service_id, "plain_value", %parameter%]
+    cm_user.registration.form.type:
+        class: CM\UserBundle\Form\Type\RegistrationFormType
+        arguments: [%fos_user.model.user.class%]
+        tags:
+        - { name: form.type, alias: cm_user_registration }
