--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -21,7 +21,7 @@ security:
             provider:       fos_userbundle
             form_login:
                 csrf_provider: form.csrf_provider
-                login_path: /
+                login_path: fos_user_security_login
                 check_path: fos_user_security_check
             logout:
                 path:       fos_user_security_logout
